@@ -187,9 +187,6 @@ public final class StepDefinition {
 
     @Before
     public void beforeEachScenario(final Scenario scenario) throws Exception {
-        if (scenario.getName().equals("g_VX1_2_3_4X_name"))
-            System.out.println("stop!");
-
         world.beforeEachScenario(scenario);
         stringParameters.clear();
         if (traversal != null) {
